<resources>
    <string name="app_name">GoogleBooksClient</string>
    <string name="search_button">Buscar</string>
    <string name="results">Resultados</string>
    <string name="books">Libros</string>
    <string name="magazines">Revistas</string>
    <string name="all">Ambos</string>
    <string name="title">Titulo</string>
    <string name="authors">Autores</string>
    <string name="titleApp">Busque sus revistas o libros</string>
    <string name="loading">Cargando...</string>
    <string name="no_data">No hay resultados</string>
    <string name="no_search">Por favor introduzca un campo de búsqueda</string>
    <string name="no_network">Por favor conmpruebe su conexión y intentelo de nuevo</string>


</resources>